manifests/deploy/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: tripapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryedx5658.azurecr.io/tripinsights/poi:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
        ports:
        - containerPort: 80
          name: poi
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: kv-secret
            nodePublishSecretRef:
              name: secrets-store-creds
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: tripapi
spec:
  ports:
  - port: 80
  selector:
    app: poi
